Feature/refactor hint settings (#25)
* refacto: decouple hint settings and parser evalutations

* refacto: Remove pivot disable from parser and inherit from sheet

* fix: Fix data table first row to the layex row offset

---------

Co-authored-by: Romuald Rousseau <romuald.rousseau@servier.com>